--- a/server/pom.xml
+++ b/server/pom.xml
@@ -36,7 +36,7 @@
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <version>${spring-boot.version}</version>
                 <configuration>
-                    <mainClass>com.hthjsj.md.demo</mainClass>
+                    <mainClass>com.hthjsj.md.demo.Application</mainClass>
                     <layout>ZIP</layout>
                     <excludes>
                         <exclude>
