--- a/web/package.json
+++ b/web/package.json
@@ -3,7 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
+    "serve:local": "vue-cli-service serve",
+    "serve:dev": "vue-cli-service serve",
     "build": "vue-cli-service build",
     "build:prod": "vue-cli-service build --mode production",
     "lint": "vue-cli-service lint"
