--- a/server/src/main/resources/application.yml
+++ b/server/src/main/resources/application.yml
@@ -71,8 +71,14 @@ md:
         - /router
         - /user/login
     upload: # 上传配置
-      mode: local # default, 可以不配置
-      base-upload-path: /opt/www/db-meta-serve # 当mode为本地时，配置的本地上传根路径
+      mode: asoco-oss # default, 可以不配置
+      local:
+        base-upload-path: /opt/www/db-meta-serve # 当mode为本地时，配置的本地上传根路径
+      asoco-oss:
+        basic-service-url: https://api.asoco.com.cn # 基础服务地址
+        upload-path: /oss/upload # 基础服务上传接口path, 默认为此值，可不提供
+        bucket-name: db-metadata-demo
+
     event-enabled: true
     component:
       replace-from-json-file: false # 是否开启每次启动时从json文件(defaultInstance.json)中推导组件实例配置，并覆盖数据库
