--- a/web/package.json
+++ b/web/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve:local": "vue-cli-service serve",
-    "serve:dev": "vue-cli-service serve",
+    "serve:local": "vue-cli-service serve --mode local",
+    "serve:dev": "vue-cli-service serve --mode development",
     "build": "vue-cli-service build",
     "build:prod": "vue-cli-service build --mode production",
     "lint": "vue-cli-service lint"
@@ -13,7 +13,7 @@
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "element-ui": "^2.14.1",
-    "db-metadata": "^2.2.25",
+    "db-metadata": "^2.2.28",
     "vue": "^2.6.11",
     "vue-router": "^3.1.3"
   },
