--- a/server/pom.xml
+++ b/server/pom.xml
@@ -27,6 +27,16 @@
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.projectlombok</groupId>
+            <artifactId>lombok</artifactId>
+            <optional>true</optional>
+        </dependency>
+        <dependency>
+            <groupId>com.hthjsj</groupId>
+            <artifactId>asoco-common</artifactId>
+            <version>2.2.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
     <build>
