--- a/server/src/main/resources/application.yml
+++ b/server/src/main/resources/application.yml
@@ -10,9 +10,9 @@ logging:
 
 spring:
   datasource:
-    url: jdbc:mysql://192.168.6.64:3306/metadata?useSSL=false&characterEncoding=utf-8
-    username: root
-    password: wM4T*q1rhKfS
+    url: jdbc:mysql://${your_db_ip}:${your_db_port}/${your_db_name}?useSSL=false&characterEncoding=utf-8
+    username: ${your_db_username}
+    password: ${your_db_password}
     driver-class-name: com.mysql.jdbc.Driver
     type: com.alibaba.druid.pool.DruidDataSource
 
@@ -24,10 +24,11 @@ spring:
 # db-metadata完整的默认配置
 md:
   dev-mode: true # 开发模式。为true时系统将允许一些操作(比如清空元对象，重新全量生成等)
+  version: 2.4 # dbmeta版本号
   app: # 应用配置
-    name: DB-Metadata低代码开发工具 # 系统名
+    name: DB-Metadata低代码开发框架-演示 # 系统名
     logo: meta # 系统logo地址
-    registerable: true # 系统是否支持用户自行注册
+    registerable: false # 系统是否支持用户自行注册
     addable: true # 系统是否支持用户添加其他用户
     default_pass: 888888 # 默认(初始)密码， 当添加用户时、用户注册(未提供密码时)，将使用此默认密码
     pass-encrypt-key: DB-Metadata is delicious # 用户密码加密密钥。无论什么方式，入库的明文密码都需要使用此密钥进行加密。加密方式为AES对称加密。此密钥一旦设定，如果更改，可能导致用户服务登录，只能重置了。
@@ -37,13 +38,7 @@ md:
     show-greeting: true # 显示问候语
     show-theme-setting: true # 显示主题设置入口, 设为false，则用户无法设置主题
     allow-custom-theme: false # 是否允许用户自由配置主题。用户界面上设置的主题只影响其本地。
-    doc-url: https://doc-dbmeta.asoco.com.cn # db-meta文档地址
-
-    # ROOT账号配置。username, 和password是必须的属性，也可以添加其他属性。如果md.server.login.login-key不是username, 比如是phone， 则必须为root配置phone属性。以便确认登录的是ROOT用户。注意: ROOT用户的id固定是"0"
-    # 若登录时 md.server.login.login-key的值和此配置下同名key的值相等，那么优先进行ROOT认证, 密码匹配则视为ROOT, 返回此ROOT对象; 密码若不匹配再去用户数据库进行匹配。
-    root:
-      username: ROOT
-      password: 727227682e82393805614e2a7774d03d # 为aes加密值，加密密钥为 md.app.pass-encrypt-key。此密码明文为888888
+    doc-url: http://dbmeta.pengxg.cc # db-meta文档地址
 
   server:
     enable-certification: true # 是否启用认证，若关闭, 则不用登录，不用鉴权。
@@ -71,19 +66,21 @@ md:
         - /router
         - /user/login
     upload: # 上传配置
-      mode: asoco-oss # default, 可以不配置
+      mode: local # 上传采用的模式。默认为local, 表示上传到服务器本地目录(具体路径取决于md.server.upload.local下的配置)。
       local:
         base-upload-path: /opt/www/db-meta-serve # 当mode为本地时，配置的本地上传根路径
-      asoco-oss:
-        basic-service-url: https://api.asoco.com.cn # 基础服务地址
-        upload-path: /oss/upload # 基础服务上传接口path, 默认为此值，可不提供
-        bucket-name: db-metadata-demo
 
     event-enabled: true
     component:
       replace-from-json-file: false # 是否开启每次启动时从json文件(defaultInstance.json)中推导组件实例配置，并覆盖数据库
     meta-object:
       replace-from-json-file: false # 是否开启每次启动时从json文件(defaultObject.json)中推导元对象逻辑配置，并覆盖数据库
+    instance:
+      recompute-when-meta-field-update: false # 元字段更新时，是否重新计算元字段的UI实例配置。默认是false
 
   analysis:
     show-sql: true
+    extension:
+      meta-object-enabled: true
+      meta-field-enabled: true
+      component-instance-enabled: true
