--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,12 +1,8 @@
-# 下面这个镜像是经过修改集成了pinpoint和设置好上海时区的Java镜像
-FROM registry.cn-hangzhou.aliyuncs.com/hthj_asoco/java:8-glibc-pinpoint-skywalking
+FROM java:openjdk-8u111-jre-alpine
 
 VOLUME /tmp
+VOLUME /opt/www/db-meta-serve
 
-# 如果需要内置nginx，可以如下实现安装nginx和自启，配置参考nginx的dockerfile
-# RUN apk --no-cache add nginx && \
-#  mkdir /run/nginx && touch /run/nginx/nginx.pid && \
-#  /usr/sbin/nginx
 COPY docker-entrypoint.sh docker-entrypoint.sh
 COPY target/server-*-SNAPSHOT.jar /app/app.jar
 
