--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -17,7 +17,7 @@ jobs:
       - name: Source build
         run: |
           echo 'local install db-metadata'
-          git clone https://github.com/pengxianggui/db-metadata.git && cd db-metadata && mvn -DskipTests=true clean package
+          git clone https://github.com/pengxianggui/db-metadata.git && cd db-metadata/db-metadata-parent && mvn -DskipTests=true clean package
           cd server
           mvn -DskipTests=true clean install
           cd ./web
