--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -17,8 +17,11 @@ jobs:
       - name: Source build
         run: |
           echo 'local install db-metadata'
-          git clone https://github.com/pengxianggui/db-metadata.git && cd db-metadata/db-metadata-parent && mvn -DskipTests=true clean package
-          cd server
+          git clone https://github.com/pengxianggui/db-metadata.git
+          cd db-metadata/db-metadata-parent
+          mvn -DskipTests=true clean package
+          echo 'start to build db-metadata-demo'
+          cd ../../server
           mvn -DskipTests=true clean install
           cd ./web
           npm install && npm build:prod
