--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -24,7 +24,7 @@ jobs:
           cd ../../server
           mvn -DskipTests=true clean install
           cd ../web
-          npm install && npm build:prod
+          npm install && npm run build:prod
 
       - name: Login to docker hub
         uses: docker/login-action@v2
