--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -14,16 +14,17 @@ jobs:
         with:
           persist-credentials: false
 
-      - name: Source build
+      - name: Source build【server】
         run: |
-          echo 'local install db-metadata'
-          git clone https://github.com/pengxianggui/db-metadata.git
-          cd db-metadata/db-metadata-parent
-          mvn -DskipTests=true clean package
           echo 'start to build db-metadata-demo'
-          cd ../../server
           mvn -DskipTests=true clean install
-          cd ../web
+
+      - name: Source build【web】
+        uses: actions/setup-node@v3
+        with:
+          node-version: 12.22.12
+        run: |
+          cd ./web
           npm install && npm run build:prod
 
       - name: Login to docker hub
