--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -23,9 +23,8 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: 12.22.12
-        run: |
-          cd ./web
-          npm install && npm run build:prod
+      - run: cd ./web
+      - run: npm install && npm run build:prod
 
       - name: Login to docker hub
         uses: docker/login-action@v2
