--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -19,18 +19,6 @@ jobs:
           echo 'start to build db-metadata-demo'
           mvn -DskipTests=true clean install
 
-      - name: Source build【web】
-        uses: actions/setup-node@v3
-        with:
-          node-version: 12.22.12
-      - run: cd ./web && npm install && npm run build:prod
-
-      - name: Login to docker hub
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_PASSWORD }}
-
       - name: Docker build and push docker image 【server】
         uses: mr-smithers-excellent/docker-build-push@v6
         with:
@@ -38,8 +26,15 @@ jobs:
           tags: latest
           registry: docker.io
           dockerfile: ./server/Dockerfile
+          directory: ./server
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_PASSWORD }}
+
+      - name: Source build【web】
+        uses: actions/setup-node@v3
+        with:
+          node-version: 12.22.12
+      - run: cd ./web && npm install && npm run build:prod
 
       - name: Docker build and push docker image 【web】
         uses: mr-smithers-excellent/docker-build-push@v6
@@ -48,6 +43,7 @@ jobs:
           tags: latest
           registry: docker.io
           dockerfile: ./web/Dockerfile
+          directory: ./web
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_PASSWORD }}
 
