--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -25,6 +25,7 @@ jobs:
           image: pengxg/db-metadata-demo-server
           tags: latest
           registry: docker.io
+          dockerfile: ./server/Dockerfile
           directory: ./server
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_PASSWORD }}
@@ -41,6 +42,7 @@ jobs:
           image: pengxg/db-metadata-demo-web
           tags: latest
           registry: docker.io
+          dockerfile: ./web/Dockerfile
           directory: ./web
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_PASSWORD }}
@@ -52,6 +54,6 @@ jobs:
           username: ${{ secrets.SSH_USERNAME }}
           password: ${{ secrets.SSH_PASSWORD }}
           port: ${{ secrets.SSH_PORT }}
-          script: cd /root/db-metadata/db-metadata-demo && sh deploy.sh ${{ secrets.DOCKERHUB_USERNAME }} ${{secrets.DOCKERHUB_PASSWORD}}
+          script: cd /root/db-metadata/db-metadata-demo && sh deploy.sh
 
 
