--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -23,7 +23,7 @@ jobs:
         uses: mr-smithers-excellent/docker-build-push@v6
         with:
           image: pengxg/db-metadata-demo-server
-          tags: latest
+          tags: $GITHUB_RUN_NUMBER
           registry: docker.io
           dockerfile: ./server/Dockerfile
           directory: ./server
@@ -40,7 +40,7 @@ jobs:
         uses: mr-smithers-excellent/docker-build-push@v6
         with:
           image: pengxg/db-metadata-demo-web
-          tags: latest
+          tags: $GITHUB_RUN_NUMBER
           registry: docker.io
           dockerfile: ./web/Dockerfile
           directory: ./web
@@ -54,6 +54,6 @@ jobs:
           username: ${{ secrets.SSH_USERNAME }}
           password: ${{ secrets.SSH_PASSWORD }}
           port: ${{ secrets.SSH_PORT }}
-          script: cd /root/db-metadata/db-metadata-demo && sh deploy.sh
+          script: cd /root/db-metadata/db-metadata-demo && sh deploy.sh $GITHUB_RUN_NUMBER
 
 
