--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -54,6 +54,6 @@ jobs:
           username: ${{ secrets.SSH_USERNAME }}
           password: ${{ secrets.SSH_PASSWORD }}
           port: ${{ secrets.SSH_PORT }}
-          script: cd /root/db-metadata/db-metadata-demo && sh deploy.sh $GITHUB_RUN_NUMBER
+          script: cd /root/db-metadata/db-metadata-demo && sh deploy.sh $$GITHUB_RUN_NUMBER
 
 
