--- a/server/src/main/resources/application.yml
+++ b/server/src/main/resources/application.yml
@@ -44,7 +44,7 @@ md:
     enable-certification: true # 是否启用认证，若关闭, 则不用登录，不用鉴权。
     login: # 认证配置
       cookie-key: DB-Metadata # 登录后自动存放到cookie中的token的key
-      token-key: ASOCO-TOKEN # 登录后存放在header里的token的 key
+      token-key: X-TOKEN # 登录后存放在header里的token的 key
       login-key: username # 登录表单账号的key
       pwd-key: password # 登录表单密码的key
       includes: # 需要认证的接口
