利用dbmeta内置的aliyunoss扩展包支持阿里云oss上传/下载

--- a/server/pom.xml
+++ b/server/pom.xml
@@ -23,6 +23,11 @@
             <version>${dbmeta.version}</version>
         </dependency>
         <dependency>
+            <groupId>io.github.pengxianggui</groupId>
+            <artifactId>db-metadata-extends-aliyunoss</artifactId>
+            <version>${dbmeta.version}</version>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
