--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -40,7 +40,8 @@ jobs:
         uses: mr-smithers-excellent/docker-build-push@v6
         with:
           image: pengxg/db-metadata-demo-web
-          tags: ${{github.run_number}}
+#          tags: ${{github.run_number}}
+          tags: latest
           registry: docker.io
           dockerfile: ./web/Dockerfile
           directory: ./web
