--- a/.github/workflows/cicd.yaml
+++ b/.github/workflows/cicd.yaml
@@ -55,6 +55,6 @@ jobs:
           username: ${{ secrets.SSH_USERNAME }}
           password: ${{ secrets.SSH_PASSWORD }}
           port: ${{ secrets.SSH_PORT }}
-          script: cd /root/db-metadata/db-metadata-demo && sh deploy.sh ${{github.run_number}}
+          script: cd /root/.dbmeta && sh update.sh
 
 
