--- a/server/src/main/resources/application.yml
+++ b/server/src/main/resources/application.yml
@@ -16,6 +16,29 @@ spring:
     driver-class-name: com.mysql.jdbc.Driver
     type: com.alibaba.druid.pool.DruidDataSource
 
+  cache:
+    type: CAFFEINE # 使用caffeine缓存——内存缓存
+    caffeine:
+      spec: maximumSize=500,expireAfterAccess=600s
+
+#  cache:
+#    type: redis
+#    redis:
+#      time-to-live: 1d
+#      use-key-prefix: true
+#      key-prefix: DBMETA
+#  redis:
+#    database: 0
+#    host: 127.0.0.1
+#    port: 6379
+#    password:
+#    jedis:
+#      pool:
+#        max-active: 8 # 连接池最大连接数(负数表示无限制)
+#        max-wait: -1ms # 连接池最大阻塞时间(负数表示无限制)
+#        max-idle: 8 # 连接池最大空闲连接
+#        min-idle: 0 # 连接池最小空闲连接
+
   servlet:
     multipart:
       max-file-size: 50MB
